syntax = "proto3";
package dev.array21.drankroulette;

import "entity/game.proto";

message GetGameListResponse {
  repeated Game games = 1;
}